--- a/package.json
+++ b/package.json
@@ -3,20 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite --host",
-    "build": "vite build",
-    "preview": "vite preview --host"
+    "bns": "node node_modules/basic-node-server/index.js 3300"
   },
   "dependencies": {
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
-    "less": "^4.1.3",
-    "less-loader": "^11.1.0",
-    "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0",
-    "vite": "^3.2.4"
+    "basic-node-server": "^1.0.4"
   }
 }
