--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "bns": "node node_modules/basic-node-server/index.js 3300"
+    "dev": "node node_modules/basic-node-server/index.js 3300"
   },
   "dependencies": {
     "basic-node-server": "^1.0.4"
