--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "node node_modules/basic-node-server/bns.js 3300"
+    "dev": "npx bns 3300"
   },
   "dependencies": {
-    "basic-node-server": "^1.0.6"
+    "basic-node-server": "^1.0.11"
   }
 }
